--- a/CapstoneA.html
+++ b/CapstoneA.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="csfcp-capstonemain.css">
 </head>
 <body>
-    <!-- Sticky Nav -->
+    <!-- Nav -->
 <header>
   <div class="nav-container">
     <div class="logo">Wanderlust</div>
@@ -28,7 +28,7 @@
     </nav>
   </div>
 </header>
-    <!-- Hero Banner -->
+    <!-- Header section  -->
     <section class="hero">
         <div class="hero-content">
             <h1>Explore the World with Wanderlust</h1>
@@ -267,4 +267,5 @@
         </div>
     </footer>
 </body>
+
 </html></div>
