--- a/CapstoneA.html
+++ b/CapstoneA.html
@@ -29,8 +29,8 @@
   </div>
 </header>
     <!-- Header section  -->
-    <section class="hero">
-        <div class="hero-content">
+    <section class="cpm">
+        <div class="cpm-content">
             <h1>Explore the World with Wanderlust</h1>
             <p>Your adventure starts here. Discover breathtaking destinations, curated tours, and unforgettable experiences.</p>
             <a href="#destinations"><button class="cta-btn">Start Your Journey</button></a>
@@ -41,21 +41,21 @@
         <section class="destinations" id="destinations">
             <h2>Popular Destinations</h2>
             <div class="dest-grid">
-                <div class="dest-card">
+                <div class="destination-card">
                     <img src="maldives.jpg" alt="Maldives">
                     <div class="dest-info">
                         <h3>Maldives</h3>
                         <p>Crystal clear waters and white sandy beaches.</p>
                     </div>
                 </div>
-                <div class="dest-card">
+                <div class="destination-card">
                     <img src="paris.jpg" alt="Paris">
                     <div class="dest-info">
                         <h3>Paris</h3>
                         <p>The city of lights and romance awaits you.</p>
                     </div>
                 </div>
-                <div class="dest-card">
+                <div class="destination-card">
                     <img src="santorini.jpg" alt="santorini">
                     <div class="dest-info">
                         <h3>Santorini</h3>
@@ -269,3 +269,4 @@
 </body>
 
 </html></div>
+
