--- a/CapstoneA.html
+++ b/CapstoneA.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="csfcp-capstonemain.css">
 </head>
 <body>
-    <!-- Sticky Nav -->
+    <!-- Nav bar -->
 <header>
   <div class="nav-container">
     <div class="logo">Wanderlust</div>
@@ -28,9 +28,9 @@
     </nav>
   </div>
 </header>
-    <!-- Hero Banner -->
-    <section class="hero">
-        <div class="hero-content">
+    <!-- Header section-->
+    <section class="cpm">
+        <div class="cpm-content">
             <h1>Explore the World with Wanderlust</h1>
             <p>Your adventure starts here. Discover breathtaking destinations, curated tours, and unforgettable experiences.</p>
             <a href="#destinations"><button class="cta-btn">Start Your Journey</button></a>
@@ -263,7 +263,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            &copy; 2024 Wanderlust Travel Agency. All rights reserved.
+            &copy; 2025 Wanderlust Travel Agency. All rights reserved.
         </div>
     </footer>
 </body>
